tests/immutable_methods/immutable_methods.exp
Error ------------------------------------------------------------------------------------------------------ test.js:9:3

Cannot assign function to `a.foo` because property `foo` is not writable.

   9| a.foo = function(): C { return new C(); }
        ^^^



Found 1 error
